--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
 /** - Tipo de letra, Color e Imagen del Fondo **/
 body{
 	font-family: Cambria, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
-	background: #333 url(imagenes/primavera.png) repeat top left;
+	background: #B2F941 url(imagenes/primavera.png) repeat top left;
 	font-weight: 400;
 	font-size: 20px;
 	color: #B2F941;
