--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ body{
 	-ms-perspective: 1000px;
 	perspective: 1000px;
 }
+/** Recuadro que contiene la imagen, la descripción y el precio del artículo **/
 .dg-wrapper a{
 	width: 246px;
 	height: 206px;
@@ -192,9 +193,10 @@ body{
 	position: absolute;
 	left: 0;
 	top: 0;
-	background: transparent no-repeat top left;
+	background: rgba(255,255,255,0.8) no-repeat top left;
 	box-shadow: 0px 10px 20px rgba(0,0,0,0.3);
 }
+/** Tiempos para la transiciíon del Recuadro que contiene la imagen, la descripción y el precio del artículo **/
 .dg-wrapper a.dg-transition{
 	-webkit-transition: all 0.5s ease-in-out;
 	-moz-transition: all 0.5s ease-in-out;
