--- a/sec/enhanced.css
+++ b/sec/enhanced.css
@@ -3,13 +3,14 @@ html, body {
     height:100%;
 }
 /** Estilo del Cuerpo del documento **/
-/** - Tipo de letra, Color e Imagen del Fondo **/
+/** - Tipo de letra, Color e Imágen del Fondo, Inclute el color de la sección al final del documento que contiene los datos de la papelería **/
 body{
 	font-family: Cambria, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
-    background: #A5DBF0 url(imagenes\primavera_e.png) repeat top left;
+    background: #A5DBF0 url(imagenes/primavera_e.png) repeat top left;
 	font-weight: 400;
 	font-size: 15px;
-	color: #B2F941;
+	/* color de la fuente para todo el BODY */
+	color: #585858;
 	overflow-y: scroll;
 }
 /** Logo, Menu y facebook */
@@ -26,7 +27,7 @@ body{
 	z-index: 2000;
 	width: 112px;
 	height: 112px; 	
-	top: 9px;
+	top: 10px;
 	left: 204px;
     -webkit-box-shadow:2px 2px 5px #888888;	
     box-shadow:2px 2px 5px #888888;
@@ -40,7 +41,7 @@ body{
 	z-index: 2000;
 	width: 32px;
 	height: 32px; 	
-	top: 125px;
+	top: 130px;
 	left: 230px;
     -webkit-box-shadow:2px 2px 5px #888888;	
     box-shadow:2px 2px 5px #888888;
@@ -53,7 +54,7 @@ body{
 	z-index: 2000;
 	width: 32px;
 	height: 32px; 	
-	top: 125px;
+	top: 130px;
 	left: 270px;
     -webkit-box-shadow:2px 2px 5px #888888;	
     box-shadow:2px 2px 5px #888888;
@@ -81,7 +82,7 @@ body{
 	padding: 0px 6px;
 	text-transform: uppercase;
 	/** Espacio de separación entre un botón de navegación y el otro */
-	margin-bottom: 3px;
+	margin-bottom: 6px;
 	box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
 	font-size: 14px;
 }
@@ -99,14 +100,14 @@ body{
 .content h2{
 	font-size: 36px;
 	padding: 5px 0px 10px 0px;
-	margin-top: 1px;
+	margin-top: 10px;
 	color: #fff;
 	color: rgba(255,255,255,0.9);
 	text-shadow: 0px 1px 1px rgba(0,0,0,0.3);
 }
-/** Configuración de la cabecera h3 */
+/** Configuración de la cabecera h3 --- por ejemplo el precio de los artículos en el navegador de artículos destacados */
 .content h3{
-	font-size: 38px;
+	font-size: 36px;
 	padding: 5px 0px 10px 0px;
 	margin-top: 0px;
 	color: #fff;
@@ -115,7 +116,7 @@ body{
 	-webkit-text-stroke-color: black;
 	-webkit-text-stroke-width: 1.5px;		
 }
-/** Configuración de la cabecera h4 */
+/** Configuración de la cabecera h4 --- Por ejemplo el titulo de las efemerides */
 .content h4{
 	font-size: 18px;
 	padding: 5px 0px 10px 0px;
@@ -125,13 +126,13 @@ body{
 	background: #731745;
 	text-shadow: 0px 1px 1px rgba(0,0,0,15);
 }
-/** Configuración de la cabecera h5 */
+/** Configuración de la cabecera h5 --- Por ejemplo el Titulo Extendido de la página activa */
 .content h5{
 	font-size: 18px;
 	line-height: 24px;
 	color: #fff;
 	display: inline-block;
-	background: #55512A;
+	background: #FF411F;
 	padding: 5px;
 	margin: 3px 0px;
 }
@@ -184,10 +185,12 @@ body{
 	-ms-transition: all 0.5s ease-in-out;
 	transition: all 0.5s ease-in-out;
 }
+/** Recuadro d la imágen del artículo */
 .dg-wrapper a img{
 	display: block;
 	padding: 0px 0px 0px 0px;
 }
+/** */
 .dg-wrapper a div{
 	font-style: italic;
 	text-align: center;
@@ -203,6 +206,7 @@ body{
 .dg-wrapper a.dg-center div{
 	display: block;
 }
+/** Recuadro que contiene los botones para controlar el avance del navegador de artículos */
 .dg-container nav{
 	width: 70px;
 	position: absolute;
@@ -211,6 +215,7 @@ body{
 	left: 45%;
 	margin-left: -29px;   
 }
+/** Imagen de los dos botones de control del navegador de artículos */
 .dg-container nav span{
 	text-indent: -9000px;
 	float: left;
@@ -220,12 +225,14 @@ body{
 	opacity: 0.8;
 	background: transparent url(../imagenes/arrows.png) no-repeat top left;
 }
+/** cuando el cursor esta sobre uno de los botones de navegación, este se vuelve más nitido */
 .dg-container nav span:hover{
 	opacity: 1;
 }
+/** posición y separación entre los botones de navegación */
 .dg-container nav span.dg-next{
 	background-position: top right;
-	margin-left: 10px;
+	margin-left: 22px;
 }
 #footer{
 	position: absolute;
