--- a/sec/enhanced.css
+++ b/sec/enhanced.css
@@ -6,7 +6,7 @@ html, body {
 /** - Tipo de letra, Color e Imagen del Fondo **/
 body{
 	font-family: Cambria, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
-    background: #A5DBF0 url(imagenes\primavera_e.png) repeat top left;
+    background: #A5DBF0 url(imagenes/primavera_e.png) repeat top left;
 	font-weight: 400;
 	font-size: 15px;
 	color: #B2F941;
